--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "license": "MIT",
   "scripts": {
     "dev": "ts-node src/index.ts",
+    "lint": "eslint .",
+    "format:check": "prettier --ignore-path=.gitignore --check .",
+    "typecheck": "tsc --noEmit",
     "build": "tsc",
     "start": "node src/index.js",
     "seed": "ts-node scripts/seed.ts"
@@ -20,9 +23,12 @@
     "redis": "^5.10.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.2",
     "@types/express": "^5.0.6",
     "@types/node": "^25.0.9",
+    "eslint": "^9.39.2",
     "ts-node": "^10.9.2",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.54.0"
   }
 }
