--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/express": "^5.0.6",
     "@types/node": "^25.0.9",
     "eslint": "^9.39.2",
+    "prettier": "^3.8.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.54.0"
